tests/compile_fail/test_cursormut_invariant.stderr
error: lifetime may not live long enough
 --> tests/compile_fail/test_cursormut_invariant.rs:6:5
  |
5 | pub fn bar<'c, 'a>(x: CursorMut<'c, &'static str>) -> CursorMut<'c, &'a str> {
  |                -- lifetime `'a` defined here
6 |     x
  |     ^ returning this value requires that `'a` must outlive `'static`
  |
  = note: requirement occurs because of the type `bvec::CursorMut<'_, &str>`, which makes the generic argument `&str` invariant
  = note: the struct `bvec::CursorMut<'a, T>` is invariant over the parameter `T`
  = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
